***********************************************************
Thanks to all individuals who reported bugs.

Legend :
Added - indicates new functionality or new part of distribution
Changed - indicates a change in using/behavior FreeRapid
Fixed - indicates a bug fix

  Added : Plugin API
            - FileStreamRecognizer interface and accompanying methods for setting it
  Changed : SwingApplication framework (SAF) was updated to BetterSwingApplication framework BSAF, which fixes some bugs
  Changed : "Confirm deleting files" dialog is truncated to 20 files to avoid overly tall dialog which overflows screen
  Fixed : Lots of exceptions in log in case a plugin dependency is missing
  Fixed : Proxy list not refreshing when changing the path to it in preferences dialog
  Fixed : Fails to startup if global speed limiter value is above 255

18th July 2010 - FreeRapid Downloader 0.85 Alpha 2
  Added : Enhanced clipboard monitoring support for URLs defined in reverse order eg.:
           http://www.agaleradodownload.com/download/d/?0PPJOQ2X=d?/moc.daolpuagem.www//:ptth
           http://www.zunay.com/d/?KKLZZ2OL=d?/moc.daolpuagem.www
  Added : new items in menu Options/Global speed limit, Help/Check for plugin statuses
  Added : plugin API
            - DownloadClientConsts class with constants for DownloadClient parameters
  Added :  New theme for JTattoo LookAndFeel - "Graphite"             
  Changed : Removed obsolete entries for sorting downloads from dropdown menu, as the table can now be sorted by clicking the headings
  Changed : Show amount of downloaded data instead of "unknown" if file size is not known while downloading
  Changed : Removed Kunstoff and PGS LookAndFeel (too old and not updated), upgraded Substance LaF to version 6.0
  Changed : Default FRD Look And Feel is set to JTattoo AERO
  Fixed : Wrong file is deleted when cancelling a download in some cases, see http://bugtracker.wordrider.net/task/1306